@@ -1,7 +1,6 @@
 package com.example.sales.service;
 
 import com.example.sales.constant.ApiErrorCode;
-import com.example.sales.constant.ApiMessage;
 import com.example.sales.constant.TableStatus;
 import com.example.sales.dto.TableRequest;
 import com.example.sales.dto.TableResponse;
@@ -14,7 +13,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -29,18 +28,22 @@ public class TableService {
 
         Table table = Table.builder()
                 .name(request.getName())
-                .status(request.getStatus() != null ? request.getStatus() : TableStatus.AVAILABLE)
-                .shop(shop)
+                .shopId(shop.getId())
+                .status(Optional.ofNullable(request.getStatus()).orElse(TableStatus.AVAILABLE))
+                .capacity(request.getCapacity())
+                .note(request.getNote())
                 .build();
 
-        tableRepository.save(table);
-        return toResponse(table);
+        return toResponse(tableRepository.save(table), shop);
     }
 
     public List<TableResponse> getByShop(String shopId) {
+        Shop shop = shopRepository.findById(shopId)
+                .orElseThrow(() -> new BusinessException(ApiErrorCode.SHOP_NOT_FOUND));
+
         return tableRepository.findByShopId(shopId).stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+                .map(table -> toResponse(table, shop))
+                .toList();
     }
 
     public TableResponse updateStatus(String tableId, TableStatus status) {
@@ -48,17 +51,35 @@ public class TableService {
                 .orElseThrow(() -> new BusinessException(ApiErrorCode.TABLE_NOT_FOUND));
 
         table.setStatus(status);
-        tableRepository.save(table);
-        return toResponse(table);
+        return toResponse(tableRepository.save(table));
     }
 
     private TableResponse toResponse(Table table) {
+        Shop shop = shopRepository.findById(table.getShopId()).orElse(null);
+
         return TableResponse.builder()
                 .id(table.getId())
                 .name(table.getName())
                 .status(table.getStatus())
-                .shopId(table.getShop().getId())
-                .shopName(table.getShop().getName())
+                .shopId(table.getShopId())
+                .shopName(shop != null ? shop.getName() : null)
+                .capacity(table.getCapacity())
+                .note(table.getNote())
+                .currentOrderId(table.getCurrentOrderId())
+                .build();
+    }
+
+    private TableResponse toResponse(Table table, Shop shop) {
+        return TableResponse.builder()
+                .id(table.getId())
+                .name(table.getName())
+                .status(table.getStatus())
+                .shopId(shop.getId())
+                .shopName(shop.getName())
+                .capacity(table.getCapacity())
+                .note(table.getNote())
+                .currentOrderId(table.getCurrentOrderId())
                 .build();
     }
 }
+
